--- a/config.yml
+++ b/config.yml
@@ -30,11 +30,16 @@ webstack:
     # 可选的搜索引擎
     engines:
       - google
-      - github
-      - weibo
       - baidu
-      - bilibili
+      - weibo
+      - bing
+      - sogou
       - zhihu
+      - so
+      - wangpan
+      - bilibili
+      - github
+    
 
 content:
   categories:
