--- a/config.yml
+++ b/config.yml
@@ -26,7 +26,7 @@ google_analytics: "G-EXE1PJ8CR"
 webstack:
   search:
     enabled: true
-    default: google
+    default: baidu
     # 可选的搜索引擎
     engines:
       - google
@@ -35,7 +35,7 @@ webstack:
       - sougou
       - github
       - weibo
-      - so
+      - yahoo
       - bilibili
       - zhihu
 
@@ -70,9 +70,9 @@ content:
          - name: 微信导航
           description: 免费发布公众号、微信群、小程序
           url: http://www.010810.com/
-         - name: 自由导航
-          description: github导航页
-          url: https://a1609jk.github.io/navi/
+         - name: 搜索导航
+          description: 各种搜索引擎导航
+          url: http://sousuo.org.cn/
           - name: 一为导航
           description: 绚丽的综合导航
           url: https://nav.iowen.cn/
@@ -377,7 +377,7 @@ content:
          - name: dynalist
           description: 大纲式计划内容
           url: https://dynalist.io/
-          - name: notion
+         - name: notion
           description: 知识库
           url: https://www.notion.so/zh-cn
     - name: 社区资讯
