--- a/config.yml
+++ b/config.yml
@@ -66,7 +66,7 @@ content:
           url: http://shuxiangjia.cn/
         - name: 设计师导航
           description: 设计相关内容汇总
-          url: https://webstack.cc/en/index.html#
+          url: https://webstack.cc/cn/index.html
          - name: 微信导航
           description: 免费发布公众号、微信群、小程序
           url: http://www.010810.com/
